k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devapp
  labels:
    app.kubernetes.io/name: devapp
